<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MsgRerouter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_number">Enter 10 Digit Forwarding Number</string>
    <string name="start_forward">Start Forwarding</string>
    <string name="stop_forward">Stop Forwarding</string>
    <string name="enter_break">Enter Service Stopper</string>
    <string name="number_hint">e.g. 3334445555</string>
    <string name="delim">e.g. ::delim@$$</string>    
    
</resources>
