<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ReRouterPreferences" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_number" />
	<EditText
	    android:id="@+id/forwarding_number"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	   	android:hint="@string/number_hint"
	    android:inputType="phone" />
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_break" />
	<EditText
	    android:id="@+id/service_stopper"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	   	android:hint="@string/delim"
	    android:inputType="textShortMessage" />
	<Button 
	    android:id="@+id/start_forwarding_service" 	    
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="@string/start_forward" 
	    android:onClick="startForwarding" />

</LinearLayout>
